Fix overflow in server creator

--- a/fixes.css
+++ b/fixes.css
@@ -16,3 +16,4 @@
 #app-mount .customStatusEmoji-3a2-Zo{margin-top:0px}
 #app-mount .actionButtons-14eAc_ > span:nth-child(n) ,.actionButtons-14eAc_ > span:nth-child(n) > button{width:32px;height:32px;min-width:32px;min-height:32px;}
 #app-mount .container-2wlB3z{height:calc(100% + var(--app-info-bar-height))}
+#uid_179{overflow: hidden}
